[project]
name = "ibm-assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-ollama>=1.1.0",
    "pytest>=9.1.0",
]
